fix font-size-extra. fix bolder font line-height and letter-spacing, close #49

--- a/css/responsive/tablet.styl
+++ b/css/responsive/tablet.styl
@@ -187,7 +187,11 @@ p.wp-caption-text
   ul 
     padding: $margin-basic $margin-small
   
+#projects-menu
+  width: 60%
+  
 // PROJECT
+
 #project-text-holder
   p 
     width: 720px
